feat: Header component 작성 #7
- Header component 코드 작성
- window scroll event 관련 Home.tsx 코드 일부 수정
- global.css 코드 일부 수정

--- a/src/global.css
+++ b/src/global.css
@@ -7,6 +7,7 @@
 * {
   box-sizing: border-box;
 }
-body {
-  overflow: hidden;
+
+.semibold-20 {
+  @apply font-pretendard font-semibold text-size-20 leading-normal;
 }
