feat: NavigationBar component 작성 #7
- NavigationBar component 코드를 작성
- Layout component에 NavigationBar component 적용

--- a/src/global.css
+++ b/src/global.css
@@ -11,3 +11,7 @@
 .semibold-20 {
   @apply font-pretendard font-semibold text-size-20 leading-normal;
 }
+
+.semibold-11 {
+  @apply font-pretendard font-semibold text-size-11 leading-normal;
+}
