--- a/src/global.css
+++ b/src/global.css
@@ -12,6 +12,14 @@
   @apply font-pretendard font-semibold text-size-20 leading-normal;
 }
 
+.semibold-13 {
+  @apply font-pretendard font-semibold text-size-13 leading-normal;
+}
+
 .semibold-11 {
   @apply font-pretendard font-semibold text-size-11 leading-normal;
+}
+
+.regular-13 {
+  @apply font-pretendard font-regular text-size-13 leading-normal;
 }
