feat: Button component 작성 #9
- Button component 코드 작성
- Button component 확인을 위한 Home.tsx 일부 수정

--- a/src/global.css
+++ b/src/global.css
@@ -20,6 +20,10 @@
   @apply font-pretendard font-semibold text-size-11 leading-normal;
 }
 
+.regular-14 {
+  @apply font-pretendard font-regular text-size-14 leading-normal;
+}
+
 .regular-13 {
   @apply font-pretendard font-regular text-size-13 leading-normal;
 }
