--- a/src/global.css
+++ b/src/global.css
@@ -9,21 +9,25 @@
 }
 
 .semibold-20 {
-  @apply font-pretendard font-semibold text-size-20 leading-normal;
+  @apply font-pretendard text-size-20 font-semibold leading-normal;
 }
 
 .semibold-13 {
-  @apply font-pretendard font-semibold text-size-13 leading-normal;
+  @apply font-pretendard text-size-13 font-semibold leading-normal;
 }
 
 .semibold-11 {
-  @apply font-pretendard font-semibold text-size-11 leading-normal;
+  @apply font-pretendard text-size-11 font-semibold leading-normal;
+}
+
+.medium-16 {
+  @apply font-pretendard text-size-16 font-medium leading-normal;
 }
 
 .regular-14 {
-  @apply font-pretendard font-regular text-size-14 leading-normal;
+  @apply font-pretendard text-size-14 font-regular leading-normal;
 }
 
 .regular-13 {
-  @apply font-pretendard font-regular text-size-13 leading-normal;
+  @apply font-pretendard text-size-13 font-regular leading-normal;
 }
