--- a/src/global.css
+++ b/src/global.css
@@ -20,6 +20,10 @@
   @apply font-pretendard text-size-11 font-semibold leading-normal;
 }
 
+.medium-18 {
+  @apply font-pretendard text-size-18 font-medium leading-normal;
+}
+
 .medium-16 {
   @apply font-pretendard text-size-16 font-medium leading-normal;
 }
