feat: NailSnap component 추가 #13
- NailSnap component 추가
- HotNailList에 BottomUpSheet onClick event 추가
- Layout 일부 수정
- NavigationBar 일부 수정

--- a/src/global.css
+++ b/src/global.css
@@ -28,6 +28,10 @@
   @apply font-pretendard text-size-16 font-medium leading-normal;
 }
 
+.regular-16 {
+  @apply font-pretendard text-size-16 font-regular leading-normal;
+}
+
 .regular-14 {
   @apply font-pretendard text-size-14 font-regular leading-normal;
 }
