--- a/src/global.css
+++ b/src/global.css
@@ -12,6 +12,10 @@
   @apply font-pretendard text-size-20 font-semibold leading-normal;
 }
 
+.semibold-14 {
+  @apply font-pretendard text-size-14 font-semibold leading-normal;
+}
+
 .semibold-13 {
   @apply font-pretendard text-size-13 font-semibold leading-normal;
 }
