feat: RequestMap reverseGeocording 추가 #15
- BottomUpSheet border를 추가
- RequestMap 페이지 map component 이중 렌더링 방지
- 중앙 좌표값 갱신을 위한 useMap 작성
- 좌표값을 바탕으로 reverseGeocording 추가
- 주소 확인을 위한 MapFooter component 추가

--- a/src/global.css
+++ b/src/global.css
@@ -12,6 +12,10 @@
   @apply font-pretendard text-size-20 font-semibold leading-normal;
 }
 
+.semibold-16 {
+  @apply font-pretendard text-size-16 font-semibold leading-normal;
+}
+
 .semibold-14 {
   @apply font-pretendard text-size-14 font-semibold leading-normal;
 }
