--- a/src/global.css
+++ b/src/global.css
@@ -8,6 +8,19 @@
   box-sizing: border-box;
 }
 
+img {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
+}
+
 .semibold-20 {
   @apply font-pretendard text-size-20 font-semibold leading-normal;
 }
