--- a/src/global.css
+++ b/src/global.css
@@ -8,6 +8,18 @@
   box-sizing: border-box;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox  */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 img {
   -webkit-user-select: none;
   -khtml-user-select: none;
